# vmu931_imu

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: vmu931_imu.launch
msg/: State.msg
src/: .imu_vmu931.py.swp
src/vmu931_imu/: calibrate.py  dato.py  prueba.py  test.py  vmu931_driver.py  vmu931_imu_node.py
